# sBash

./: .gitignore  README.md
.github/workflows/: backend_ci.yml
backend/: .env.example  .gitignore  DB.py  README.md  alembic.ini  compose.yml  crud.py  load_env.py  main.py  models.py  pyproject.toml  requirements.txt  service_crud.py
backend/.github/workflows/: python-app.yml
backend/alembic/: env.py
backend/alembic/versions/: 4eacdc645a6b_add_ext_in_projectimage.py  62055b5c4e4f_add_some_models.py  62b30270d0eb_add_projectimage.py  bd4952e18d53_add_comment.py  dfee760579f6_initial_migration.py  f13411c41253_initial_migration.py
backend/auth/: jwt.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  output.css
frontend/src/app/[channel]/: layout.tsx
frontend/src/app/[channel]/(main)/: layout.tsx  page.tsx
frontend/src/app/api/users/: users.ts
frontend/src/lib/: db.ts
frontend/src/ui/components/: AuthProvider.tsx  Dummy.tsx  DummyIdea.tsx  DummyServices.tsx  Footer.tsx  Header.tsx  Logo.tsx  ProductElement.tsx  TabNavigation.tsx  UserList.tsx  dummy.tsx
