[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "fastapi[all]>=0.114.1",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.34",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.4",
]
